Updated options, external clients

--- a/lilyterm/default.conf
+++ b/lilyterm/default.conf
@@ -13,7 +13,7 @@ font_name = DejaVu Sans Mono 10
 column = 237
 
 # The default row of vte terminal.
-row = 75
+row = 68
 
 # Use true opacity in vte box.
 # 0: do NOT use rgba, 1: force to use rgba.
@@ -153,7 +153,7 @@ embedded_copy_paste_menu = 1
 
 # Sets whether or not the terminal will beep
 # when the child outputs the "bl" sequence.
-audible_bell = 0
+audible_bell = 1
 
 # Sets whether or not the terminal will flash
 # when the child outputs the "bl" sequence.
@@ -318,11 +318,11 @@ find_key =
 
 # Find the previous string matching the search regex.
 # Left it blank to disable this function key.
-find_key_prev = Shift F3
+find_key_prev = 
 
 # Find the next string matching the search regex.
 # Left it blank to disable this function key.
-find_key_next = F3
+find_key_next = 
 
 # Switch to prev tab.
 # Left it blank to disable this function key.
@@ -410,7 +410,7 @@ new_window =
 
 # Select all the text in the Vte Terminal box.
 # Left it blank to disable this function key.
-select_all = Ctrl O
+select_all = 
 
 # Copy the text to clipboard.
 # Left it blank to disable this function key.
@@ -476,7 +476,7 @@ brightness = 0.200
 
 # The brightness for ansi colors used in terminal when inactive.
 # Left it blank to disable this feature.
-inactive_brightness = 0.200
+inactive_brightness = 
 
 # The ANSI color code for Normal Black
 # You may use black, #000000 or #000000000000 here.
@@ -567,21 +567,21 @@ Color15 =
 # Left it blank to use the locale environs from current page.
 
 # The web browser using for http(s)://
-web_browser = chromium
+web_browser = firefox
 web_method = 1
 web_VTE_CJK_WIDTH = 0
 web_environ = 
 web_locale = 
 
 # The ftp client using for ftp(s)://
-ftp_client = chromium
+ftp_client = firefox
 ftp_method = 1
 ftp_VTE_CJK_WIDTH = 0
 ftp_environ = 
 ftp_locale = 
 
 # The file manager using for file:// and [Open current directory with file manager]
-file_manager = thunar
+file_manager = firefox
 file_method = 1
 file_VTE_CJK_WIDTH = 0
 file_environ = 
