--- a/i3/config
+++ b/i3/config
@@ -36,8 +36,7 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec dmenu_run
 #bindsym $mod+d exec /home/skk/.cabal/bin/yeganesh
 
-# cutpass
-bindsym $mod+c exec ~/bin/qCutpass
+# dmenu_ssh
 bindsym $mod+t exec ~/dmenu_ssh/bin/dmenu_ssh.pl
 
 # change focus
@@ -161,7 +160,7 @@ bindsym $mod+r mode "resize"
 bar {
         #status_command i3status --config ~/.i3/i3status.conf
         tray_output output
-        status_command xmobar  ~/.i3/xmobar.conf
+        status_command xmobar ~/.i3/xmobar.conf
 }
 
 ipc-socket ~/.i3/i3-ipc.sock
