Removed i3status use.  Switched weather station.

--- a/i3/xmobar.conf
+++ b/i3/xmobar.conf
@@ -3,18 +3,16 @@ Config { font = "xft:Sans-9:bold"
        , fgColor = "grey"
        , position = BottomW R 90
        , lowerOnStart = False
-       , commands = [ Run Weather "KPSM" ["-t","<skyCondition> <tempF>°F","-L","18","-H","25",
+       , commands = [ Run Weather "KDAW" ["-t","<skyCondition> <tempF>°F","-L","18","-H","25",
                                           "--normal","green","--high","red","--low","lightblue"] 3600
                     , Run DynNetwork     ["-L","0","-H","32","--normal","green","--high","red"] 10
                     , Run Cpu            ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory         ["-t","Mem: <usedratio>%"] 10
                     , Run Swap           [] 10
                     , Run Com            "uname" ["-s","-r"] "uname" 3600
-                    -- , Run Com            "/usr/bin/i3status" ["-c", "/home/skk/.i3/i3status.conf"] "i3status" 3600
                     , Run Date           "%a %b %_d %Y %H:%M" "date" 10
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       -- * %i3status% 
-       , template = "%cpu% | %memory% * %swap% | %dynnetwork%} {%uname% | %date% | %KPSM%"
-       }
+       , template = "%cpu% | %memory% * %swap% | %dynnetwork%} {%uname% | %date% | %KDAW%"
+   }
