--- a/terminator/config
+++ b/terminator/config
@@ -8,14 +8,15 @@
 [keybindings]
 [profiles]
   [[default]]
-    palette = "#073642:#d30102:#859900:#b58900:#6c71c4:#d33682:#2aa198:#839496:#586e75:#cb4b16:#859900:#b58900:#268bd2:#d33682:#2aa198:#93a1a1"
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     login_shell = True
-    background_color = "#eee8d5"
+    background_image = None
+    background_color = "#002b36"
     scrollback_lines = 10000
     use_system_font = False
-    cursor_color = "#002b36"
-    foreground_color = "#002b36"
-    font = Droid Sans Mono 10
+    cursor_color = "#797979"
+    foreground_color = "#839496"
+    font = Anonymous Pro 10
     word_chars = "-A-Za-z0-9,./?%&#:_@"
 [layouts]
   [[default]]
