--- a/emacs/project-persist/resume/.emacs.desktop
+++ b/emacs/project-persist/resume/.emacs.desktop
@@ -2,7 +2,7 @@
 ;; --------------------------------------------------------------------------
 ;; Desktop File for Emacs
 ;; --------------------------------------------------------------------------
-;; Created Sat Apr 20 18:41:50 2013
+;; Created Wed May 22 18:22:22 2013
 ;; Desktop file format version 206
 ;; Emacs version 24.3.1
 
@@ -17,12 +17,12 @@
 
 ;; Buffer section -- buffers listed in same order as in buffer list:
 (desktop-create-buffer 206
-  "/home/skk/resume/resume.tex"
+  "/home/skk/Projects/resume/resume.tex"
   "resume.tex"
   'latex-mode
-  '(auto-fill-mode abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
-  4040
-  '(4041 nil)
+  '(auto-fill-mode abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode flyspell-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
+  2630
+  '(2631 nil)
   nil
   nil
   '((indent-tabs-mode) (buffer-file-coding-system . undecided-unix) (fill-column . 78) (truncate-lines)))
