--- a/i3/xmobar.conf
+++ b/i3/xmobar.conf
@@ -9,10 +9,9 @@ Config { font = "xft:Sans-9:bold"
                     , Run Cpu            ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory         ["-t","Mem: <usedratio>%"] 10
                     , Run Swap           [] 10
-                    , Run Com            "uname" ["-s","-r"] "uname" 3600
                     , Run Date           "%a %b %_d %Y %H:%M" "date" 10
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%cpu% | %memory% * %swap% | %dynnetwork%} {%uname% | %date% | %KDAW%"
+       , template = "%cpu% | %memory% * %swap% | %dynnetwork%} {%date% | %KDAW%"
    }
