--- a/emacs/project-persist/Swine_DNDC/.emacs.desktop
+++ b/emacs/project-persist/Swine_DNDC/.emacs.desktop
@@ -2,7 +2,7 @@
 ;; --------------------------------------------------------------------------
 ;; Desktop File for Emacs
 ;; --------------------------------------------------------------------------
-;; Created Wed May 22 19:01:18 2013
+;; Created Fri May 24 15:08:17 2013
 ;; Desktop file format version 206
 ;; Emacs version 24.3.1
 
@@ -11,43 +11,54 @@
 (setq tags-file-name nil)
 (setq tags-table-list nil)
 (setq search-ring '("sunri" "HLA"))
-(setq regexp-search-ring '("Student" "section" "Last up" "tex" "EPS" "EPSCOR" "5pt" "Work" "Side" "Programm" "10pt" "hla" "\\_<TUB\\_>" "\\_<tub\\_>" "\\_<facty\\_>" "\\_<tub\\_>"))
+(setq regexp-search-ring '("tools" ".j" "throw" "tools" "*" "\\_<Master\\.r\\_>" "Student" "section" "Last up" "tex" "EPS" "EPSCOR" "5pt" "Work" "Side" "Programm"))
 (setq register-alist nil)
-(setq file-name-history '("/home/skk/dot-files-forest/emacs/mode-mappings.el" "/home/skk/resume/resume.tex" "/home/skk/resume/resume_skk.tex" "/home/skk/resume/resume.tex" "/home/skk/.emacs.d/lib/setup_haskell.el" "/home/skk/haskell/doubleMe.hs" "/home/skk/.emacs.d/init.el"))
+(setq file-name-history '("/home/skk/Projects/Swine_DNDC/docs/tools_and_libraries.rst" "/home/skk/Projects/Swine_DNDC/docs/libraries.rst" "/home/skk/Projects/Swine_DNDC/docs/tools.rst" "/home/skk/Projects/Swine_DNDC/design/current.rst" "/home/skk/.emacs.d/init.el" "/home/skk/.emacs.d/mode-mappings.el" "/home/skk/.emacs.d/lib/setup_ess.el" "/home/skk/dot-files-forest/emacs/mode-mappings.el" "/home/skk/resume/resume.tex" "/home/skk/resume/resume_skk.tex" "/home/skk/resume/resume.tex" "/home/skk/.emacs.d/lib/setup_haskell.el" "/home/skk/haskell/doubleMe.hs" "/home/skk/.emacs.d/init.el"))
 
 ;; Buffer section -- buffers listed in same order as in buffer list:
+(desktop-create-buffer 206
+  "/home/skk/Projects/Swine_DNDC/docs/tools_and_libraries.rst"
+  "tools_and_libraries.rst"
+  'rst-mode
+  '(auto-fill-mode abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
+  1474
+  '(1475 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . undecided-unix) (fill-column . 78) (truncate-lines)))
+
+(desktop-create-buffer 206
+  "/home/skk/Projects/Swine_DNDC/docs/quote.rst"
+  "quote.rst"
+  'rst-mode
+  '(auto-fill-mode abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
+  1892
+  '(1892 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . utf-8-unix) (fill-column . 78) (truncate-lines)))
+
+(desktop-create-buffer 206
+  "/home/skk/.emacs.d/lib/setup_flyspell.el"
+  "setup_flyspell.el"
+  'emacs-lisp-mode
+  '(abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode auto-complete-mode smartparens-mode project-persist-mode projectile-mode linum-mode eldoc-mode rainbow-delimiters-mode window-number-mode yas-minor-mode pretty-symbols-mode)
+  1
+  '(170 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . undecided-unix) (truncate-lines)))
+
 (desktop-create-buffer 206
   "/home/skk/Projects/Swine_DNDC/Sow_Model_Functions.r"
   "Sow_Model_Functions.r"
   'ess-mode
   '(abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode auto-complete-mode project-persist-mode projectile-mode linum-mode eldoc-mode window-number-mode yas-minor-mode)
-  1435
-  '(1436 nil)
+  624
+  '(625 nil)
   nil
   nil
   '((indent-tabs-mode) (buffer-file-coding-system . undecided-unix) (truncate-lines)))
-
-(desktop-create-buffer 206
-  "/home/skk/Projects/Swine_DNDC/Manuscript_Growth_Model.docx"
-  "Manuscript_Growth_Model.docx"
-  'archive-mode
-  '(abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
-  179
-  '(nil nil)
-  t
-  nil
-  '((buffer-file-coding-system . no-conversion) (truncate-lines)))
-
-(desktop-create-buffer 206
-  "/home/skk/Projects/Swine_DNDC/Sow_model.docx"
-  "Sow_model.docx"
-  'archive-mode
-  '(abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
-  4197
-  '(nil nil)
-  t
-  nil
-  '((buffer-file-coding-system . no-conversion) (truncate-lines)))
 
 (desktop-create-buffer 206
   "/home/skk/Projects/Swine_DNDC/sim_sow.r"
@@ -87,22 +98,11 @@
   "Growth_Model_Functions_1.r"
   'ess-mode
   '(abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode auto-complete-mode project-persist-mode projectile-mode linum-mode eldoc-mode window-number-mode yas-minor-mode)
-  11960
-  '(583 nil)
+  12471
+  '(12472 nil)
   nil
   nil
   '((indent-tabs-mode) (buffer-file-coding-system . undecided-unix) (truncate-lines)))
-
-(desktop-create-buffer 206
-  "/home/skk/Projects/resume/resume.tex"
-  "resume.tex"
-  'latex-mode
-  '(auto-fill-mode abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode flyspell-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
-  3160
-  '(3161 nil)
-  nil
-  nil
-  '((indent-tabs-mode) (buffer-file-coding-system . undecided-unix) (fill-column . 78) (truncate-lines)))
 
 (desktop-create-buffer 206
   nil
