--- a/dotfiles/abcde.conf
+++ b/dotfiles/abcde.conf
@@ -236,7 +236,7 @@
 
 # OUTPUTTYPE can be either "ogg", "mp3", "flac" or "spx", or a combination
 # of them separated with ",": "ogg,mp3".
-OUTPUTTYPE=mp3
+OUTPUTTYPE=mp3,ogg
 
 # Output filename format - change this to reflect your inner desire to
 # organize things differently than everyone else :)
