--- a/emacs/project-persist/HemlockForest/.emacs.desktop
+++ b/emacs/project-persist/HemlockForest/.emacs.desktop
@@ -2,7 +2,7 @@
 ;; --------------------------------------------------------------------------
 ;; Desktop File for Emacs
 ;; --------------------------------------------------------------------------
-;; Created Mon May 13 22:22:33 2013
+;; Created Sun Jun 16 15:25:56 2013
 ;; Desktop file format version 206
 ;; Emacs version 24.3.1
 
@@ -11,18 +11,40 @@
 (setq tags-file-name nil)
 (setq tags-table-list nil)
 (setq search-ring '("magi" "mu" "packages-" "smooth" "hanoi" "CENTER" "zoom" "panT" "Fitness" "Fitnesss" " " "\"" "type=\"" "\"" "type" "HOUSING::PIDM"))
-(setq regexp-search-ring '("confl" "indent" "font" "mode" "i" "autop" "An" "font" "load" "point-s" "shell-pop" "lu" "hide-reg" "hex" "prelu" "\\_<src_location_def\\_>"))
+(setq regexp-search-ring '("Fin" "confl" "indent" "font" "mode" "i" "autop" "An" "font" "load" "point-s" "shell-pop" "lu" "hide-reg" "hex" "prelu"))
 (setq register-alist nil)
-(setq file-name-history '("/home/skk/dot-files-forest/emacs/lib/setup_appearance.el" "/home/skk/.emacs.d/lib/setup_archlinux.el" "/home/skk/.emacs.d/elpa/pkgbuild-mode-20120214.2332/pkgbuild-mode.el" "/home/skk/.emacs.d/init.el" "/home/skk/aur/perlconsole/PKGBUILD" "/home/skk/dot-files-forest/emacs/lib/setup_magit.el" "/home/skk/.emacs.d/elpa/graphene-20130422.1848/graphene.el" "/home/skk/dot-files-forest/emacs/custom.el" "/home/skk/dot-files-forest/emacs/lib/setup_appearance.el" "/home/skk/dot-files-forest/test.html" "/home/skk/dot-files-forest/emacs/lib/setupo_smartparens.el" "/home/skk/dot-files-forest/private.txt" "/home/skk/dot-files-forest/emacs/lib/setup_autoinsertmode.el" "/home/skk/dot-files-forest/emacs/custom.el" "/home/skk/dot-files-forest/.projectile" "/home/skk/dot-files-forest/emacs/setup_autocomplete.el" "/home/skk/dot-files-forest/emacs/init.el" "~/.i3/config" "~/dmenu_ssh/src/main.pm" "~/dmenu_ssh/src/dmenusshmain.pm" "~/dmenu_ssh/src/DMenuSSH/Launcher/DMenu.pm" "~/dmenu_ssh/src/DMenuSSH/Launcher/Base.pm" "~/dmenu_ssh/src/DMenuSSH/TTY/Base.pm" "~/dmenu_ssh/src/DMenuSSH/DataSource/Base.pm" "~/dmenu_ssh/src/DMenuSSH/Base.pm" "~/dmenu_ssh/src/DMenuSSH/Launcher/Base.pm" "~/dmenu_ssh/src/DMenuSSH/TTY/Base.pm" "~/dmenu_ssh/src/DMenuSSH/DataSource/Base.pm" "~/dmenu_ssh/src/dmenusshmain.pm" "~/dmenu_ssh/src/DMenuSSH/TTY/Xterm.pm"))
+(setq file-name-history '("/home/skk/Projects/HemlockForest/meeting_minutes/bod_meeting_2013_05_15_no_es.rst" "/home/skk/dot-files-forest/emacs/lib/setup_appearance.el" "/home/skk/.emacs.d/lib/setup_archlinux.el" "/home/skk/.emacs.d/elpa/pkgbuild-mode-20120214.2332/pkgbuild-mode.el" "/home/skk/.emacs.d/init.el" "/home/skk/aur/perlconsole/PKGBUILD" "/home/skk/dot-files-forest/emacs/lib/setup_magit.el" "/home/skk/.emacs.d/elpa/graphene-20130422.1848/graphene.el" "/home/skk/dot-files-forest/emacs/custom.el" "/home/skk/dot-files-forest/emacs/lib/setup_appearance.el" "/home/skk/dot-files-forest/test.html" "/home/skk/dot-files-forest/emacs/lib/setupo_smartparens.el" "/home/skk/dot-files-forest/private.txt" "/home/skk/dot-files-forest/emacs/lib/setup_autoinsertmode.el" "/home/skk/dot-files-forest/emacs/custom.el" "/home/skk/dot-files-forest/.projectile" "/home/skk/dot-files-forest/emacs/setup_autocomplete.el" "/home/skk/dot-files-forest/emacs/init.el" "~/.i3/config" "~/dmenu_ssh/src/main.pm" "~/dmenu_ssh/src/dmenusshmain.pm" "~/dmenu_ssh/src/DMenuSSH/Launcher/DMenu.pm" "~/dmenu_ssh/src/DMenuSSH/Launcher/Base.pm" "~/dmenu_ssh/src/DMenuSSH/TTY/Base.pm" "~/dmenu_ssh/src/DMenuSSH/DataSource/Base.pm" "~/dmenu_ssh/src/DMenuSSH/Base.pm" "~/dmenu_ssh/src/DMenuSSH/Launcher/Base.pm" "~/dmenu_ssh/src/DMenuSSH/TTY/Base.pm" "~/dmenu_ssh/src/DMenuSSH/DataSource/Base.pm" "~/dmenu_ssh/src/dmenusshmain.pm"))
 
 ;; Buffer section -- buffers listed in same order as in buffer list:
 (desktop-create-buffer 206
-  "/home/skk/Projects/HemlockForest/meeting_minutes/bod_meeting_2013_03_14.rst"
-  "bod_meeting_2013_03_14.rst"
+  "/home/skk/Projects/HemlockForest/meeting_minutes/bod_meeting_2013_05_15_no_es.rst"
+  "bod_meeting_2013_05_15_no_es.rst"
   'rst-mode
-  '(auto-fill-mode abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode flyspell-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
-  1793
-  '(1793 nil)
+  '(auto-fill-mode abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
+  3932
+  '(3932 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . utf-8-unix) (fill-column . 78) (truncate-lines)))
+
+(desktop-create-buffer 206
+  "/home/skk/Projects/HemlockForest/meeting_minutes/bod_meeting_2013_05_15.rst"
+  "bod_meeting_2013_05_15.rst"
+  'rst-mode
+  '(auto-fill-mode abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
+  3568
+  '(3569 nil)
+  nil
+  nil
+  '((buffer-file-coding-system . utf-8-unix) (fill-column . 78) (truncate-lines)))
+
+(desktop-create-buffer 206
+  "/home/skk/Projects/HemlockForest/meeting_minutes/2013_05_15.rst"
+  "2013_05_15.rst"
+  'rst-mode
+  '(auto-fill-mode abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode project-persist-mode projectile-mode linum-mode window-number-mode yas-minor-mode)
+  1094
+  '(1095 nil)
   nil
   nil
   '((buffer-file-coding-system . utf-8-unix) (fill-column . 78) (truncate-lines)))
@@ -32,8 +54,8 @@
   "setup_appearance.el"
   'emacs-lisp-mode
   '(abbrev-mode visual-line-mode global-visual-line-mode override-global-mode global-auto-revert-mode undo-tree-mode auto-complete-mode smartparens-mode project-persist-mode projectile-mode linum-mode eldoc-mode rainbow-delimiters-mode window-number-mode yas-minor-mode pretty-symbols-mode)
-  5081
-  '(5081 nil)
+  5139
+  '(5139 nil)
   nil
   nil
   '((buffer-file-coding-system . undecided-unix) (truncate-lines)))
