--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "scm_breeze"]
 	path = scm_breeze
 	url = git://github.com/ndbroadbent/scm_breeze.git
+[submodule "vimrc"]
+	path = vimrc
+	url = https://github.com/amix/vimrc
