--- a/i3/xmobar.conf
+++ b/i3/xmobar.conf
@@ -1,4 +1,4 @@
-Config { font = "xft:Sans-10:bold"
+Config { font = "xft:Source Sans Pro-10:bold"
        , bgColor = "black"
        , fgColor = "grey"
        , position = BottomW R 90
