--- a/terminator/config
+++ b/terminator/config
@@ -1,20 +1,21 @@
 [global_config]
   dbus = True
   window_state = hidden
+  borderless = True
   focus = mouse
   title_transmit_bg_color = "#887f7f"
 [keybindings]
 [profiles]
   [[default]]
-    palette = "#000000:#aa0000:#00aa00:#aa5500:#0000aa:#aa00aa:#00aaaa:#aaaaaa:#555555:#ff5555:#55ff55:#ffff55:#5555ff:#ff55ff:#55ffff:#ffffff"
+    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     login_shell = True
     background_image = None
-    background_color = "#ffffdd"
+    background_color = "#fdf6e3"
     scrollback_lines = 10000
     use_system_font = False
     cursor_color = "#797979"
-    foreground_color = "#000000"
-    font = Consolas 10
+    foreground_color = "#657b83"
+    font = Anonymous Pro 10
     word_chars = "-A-Za-z0-9,./?%&#:_@"
 [layouts]
   [[default]]
