--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -4,46 +4,51 @@ general {
 }
 
 #order += "ipv6"
-#order += "disk /"
-order += "run_watch DHCP"
-order += "run_watch VPN"
+order += "disk /"
+order += "disk /home"
+#order += "run_watch DHCP"
+#order += "run_watch VPN"
 #order += "wireless wlan0"
+order += "ethernet eth0"
 #order += "battery 0"
-#order += "ethernet eth0"
 order += "load"
 order += "time"
 
 wireless wlan0 {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+    format_up = "W: (%quality at %essid) %ip"
+    format_down = "W: down"
 }
 
 ethernet eth0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+    # if you use %speed, i3status requires root privileges
+    format_up = "E: %ip (%speed)"
+    format_down = "E: down"
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+    format = "%status %percentage %remaining"
 }
 
 run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
+    pidfile = "/var/run/dhclient*.pid"
 }
 
 run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+    pidfile = "/var/run/vpnc/pid"
 }
 
 time {
-        format = "%Y-%m-%d %H:%M:%S"
+    format = "%Y-%m-%d %H:%M:%S"
 }
 
 load {
-        format = "%1min"
+    format = "%1min %5min %15min"
 }
 
 disk "/" {
-        format = "%free (or: %percentage_used used, %percentage_used_of_avail used of avail, %percentage_free free, %percentage_avail avail)"
+    format = "%free"
+}
+
+disk "/home" {
+    format = "%free"
 }
