--- a/i3/config
+++ b/i3/config
@@ -6,35 +6,36 @@
 # Mod1 --> Alt Key
 # Mod4 --> Win Key
 set $mod Mod4
-#set $mod Mode_switch
 
 # programs to run at startup
-exec --no-startup-id /usr/bin/xmodmap /home/skk/.Xmodmap
-exec --no-startup-id /usr/bin/xrdb /home/skk/.Xresources 
-exec --no-startup-id /usr/bin/xautolock -time 3 -locker -secure
-exec --no-startup-id /home/skk/.i3/startup.sh
+exec --no-startup-id /usr/bin/xrdb /home/skk/.Xresources
+exec --no-startup-id gpg-agent --daemon --enable-ssh-support --write-env-file "${HOME}/.gpg-agent-info"
+exec --no-startup-id /usr/libexec/gnome-settings-daemon
+exec --no-startup-id gnome-sound-applet
+exec --no-startup-id /usr/bin/feh --bg-fill /home/skk/.i3/hubble_ultra_deep_field.jpg
 
 # The nvidia driver only provides support for Xinerama instead of RandR.
-force_xinerama yes
+force_xinerama no
 
-# Font for window titles. 
-font xft:Source Sans Pro 8.5 
-set barfont "xft:Source Sans Pro 8.5""
+# Font for window titles.
+font pango:Sans 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec rxvt
+#bindsym $mod+Return exec rxvt
+bindsym $mod+Return exec gnome-terminal
 #bindsym $mod+Return exec terminator
 #bindsym $mod+Shift+Return exec ~/.i3/dmenufm.sh
+
+bindsym $mod+Shift+o exec "gnome-screensaver-command --lock "
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
-#bindsym $mod+d exec /home/skk/.cabal/bin/yeganesh
 
 # dmenu_ssh
 bindsym $mod+t exec ~/dmenu_ssh/bin/dmenu_ssh.pl
@@ -129,46 +130,14 @@ bindsym $mod+Shift+minus move scratchpad
 # Show the first scratchpad window
 bindsym $mod+minus scratchpad show
 
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window's width.
-        # Pressing right will grow the window's width.
-        # Pressing up will shrink the window's heignmt.
-        # Pressing down will grow the window's height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-
 bindsym $mod+r mode "resize"
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#        #status_command i3status --config ~/.i3/i3status.conf
-#        tray_output output
-#        status_command /home/skk/.cabal/bin/xmobar ~/.i3/xmobar.conf
-#}
 
 ipc-socket ~/.i3/i3-ipc.sock
 
 # pulse audio volume control
-bindsym XF86AudioLowerVolume exec /usr/bin/pactl set-sink-volume 0 -- '-5%'
-bindsym XF86AudioRaiseVolume exec /usr/bin/pactl set-sink-volume 0 -- '+5%'
-bindsym XF86AudioMute exec /usr/bin/pactl set-sink-volume 0 0
+#bindsym XF86AudioLowerVolume exec /usr/bin/pactl set-sink-volume 0 -- '-5%'
+#bindsym XF86AudioRaiseVolume exec /usr/bin/pactl set-sink-volume 0 -- '+5%'
+#bindsym XF86AudioMute exec /usr/bin/pactl set-sink-volume 0 0
 #bindsym XF86Launch1 exec /usr/bin/pactl play-sample that_was_easy
 #bindsym XF86MonBrightnessUp exec /usr/bin/xbacklight -inc 10
 #bindsym XF86MonBrightnessDown exec /usr/bin/xbacklight -dec 5
@@ -177,8 +146,10 @@ bindsym XF86AudioMute exec /usr/bin/pactl set-sink-volume 0 0
 # finds out, if available)
 bar {
     position bottom
-    font $barfont
+    font pango:Sans 8
+    #font pango:Source Sans Pro 8.5
     status_command i3status --config ~/.i3/i3status.conf
+    tray_output primary
     colors {
         background #073642
         statusline #eee8d5
@@ -192,4 +163,11 @@ bar {
 client.focused          #859900 #859900 #fdf6e3 #2e9ef4
 client.focused_inactive #268bd2 #268bd2 #fdf6e3 #484e50
 client.unfocused        #333333 #93a1a1 #fdf6e3 #292d2e
-#
+
+# Enable/disable logging
+#bindsym $mod+x debuglog toggle
+#bindsym $mod+Shift+x shmlog toggle
+
+
+#exec --no-startup-id i3-msg 'workspace 3; exec google-chrome-beta; workspace 1'
+
