Changed date/time and network display

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -1,6 +1,6 @@
 general {
-        colors = true
-        interval = 5
+    colors = true
+    interval = 5
 }
 
 #order += "ipv6"
@@ -9,7 +9,7 @@ order += "disk /home"
 #order += "run_watch DHCP"
 #order += "run_watch VPN"
 #order += "wireless wlan0"
-order += "ethernet eth0"
+order += "ethernet enp15s0"
 #order += "battery 0"
 order += "load"
 order += "time"
@@ -19,7 +19,7 @@ wireless wlan0 {
     format_down = "W: down"
 }
 
-ethernet eth0 {
+ethernet enp15s0 {
     # if you use %speed, i3status requires root privileges
     format_up = "E: %ip (%speed)"
     format_down = "E: down"
@@ -38,7 +38,7 @@ run_watch VPN {
 }
 
 time {
-    format = "%Y-%m-%d %H:%M:%S"
+    format = "%Y-%m-%d %H:%M"
 }
 
 load {
