--- a/i3/config
+++ b/i3/config
@@ -35,7 +35,8 @@ bindsym $mod+Shift+o exec "gnome-screensaver-command --lock "
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec j4-dmenu-desktop
 
 # dmenu_ssh
 bindsym $mod+t exec ~/dmenu_ssh/bin/dmenu_ssh.pl
