--- a/terminator/config
+++ b/terminator/config
@@ -1,8 +1,9 @@
 [global_config]
-  dbus = True
   window_state = hidden
-  borderless = True
+  title_hide_sizetext = True
+  dbus = True
   focus = mouse
+  borderless = True
   title_transmit_bg_color = "#887f7f"
 [keybindings]
 [profiles]
@@ -10,12 +11,12 @@
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     login_shell = True
     background_image = None
-    background_color = "#fdf6e3"
+    background_color = "#002b36"
     scrollback_lines = 10000
     use_system_font = False
     cursor_color = "#797979"
-    foreground_color = "#657b83"
-    font = Anonymous Pro 10
+    foreground_color = "#839496"
+    font = Hermit Medium 9
     word_chars = "-A-Za-z0-9,./?%&#:_@"
 [layouts]
   [[default]]
