--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "scm_breeze"]
 	path = scm_breeze
-	url = git:@github.com:ndbroadbent/scm_breeze.git
-[submodule "spf13-vim"]
-	path = spf13-vim
-	url = git@github.com:spf13/spf13-vim.git
+	url = git@github.com:ndbroadbent/scm_breeze.git
 [submodule "friendly-find"]
 	path = friendly-find
 	url = git@github.com:sjl/friendly-find.git
@@ -12,4 +9,4 @@
 	url = git@github.com:rkitover/vimpager.git
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
-	url = git://github.com/robbyrussell/oh-my-zsh
+	url = git@github.com:robbyrussell/oh-my-zsh.git
