--- a/.gitignore
+++ b/.gitignore
@@ -49,27 +49,24 @@ i3/i3log
 # mutt
 mutt/temp/*
 
-# zsh
-oh-my-zsh
-
 # sublime
 dot-files-forest.sublime-workspace
 
-sublime-text-3/Cache/
-sublime-text-3/Index/
-sublime-text-3/Installed Packages/
-sublime-text-3/Local/
-sublime-text-3/Packages/User/Package Control.last-run
-sublime-text-3/Packages/User/Package Control.ca-list
-sublime-text-3/Packages/User/Package Control.ca-bundle
-sublime-text-3/Packages/User/Package Control.system-ca-bundle
-sublime-text-3/Packages/User/Package Control.cache/
-sublime-text-3/Packages/User/Package Control.ca-certs/
+#sublime-text-3/Cache/
+#sublime-text-3/Index/
+#sublime-text-3/Installed Packages/
+#sublime-text-3/Local/
+#sublime-text-3/Packages/User/Package Control.last-run
+#sublime-text-3/Packages/User/Package Control.ca-list
+#sublime-text-3/Packages/User/Package Control.ca-bundle
+#sublime-text-3/Packages/User/Package Control.system-ca-bundle
+#sublime-text-3/Packages/User/Package Control.cache/
+#sublime-text-3/Packages/User/Package Control.ca-certs/
 
 
-sublime-text-3/Packages/BracketHighlighter
-sublime-text-3/Packages/PyV8/linux64-p3
-sublime-text-3/Packages/SublimeCodeIntel
-sublime-text-3/Packages/SublimeTODO
-sublime-text-3/Packages/Theme - Cobalt2
-sublime-text-3/Packages/i3wm-sublime
+#sublime-text-3/Packages/BracketHighlighter
+#sublime-text-3/Packages/PyV8/linux64-p3
+#sublime-text-3/Packages/SublimeCodeIntel
+#sublime-text-3/Packages/SublimeTODO
+#sublime-text-3/Packages/Theme - Cobalt2
+#sublime-text-3/Packages/i3wm-sublime
