Switched terminal (again). Start /usr/bin/xfce4-session

--- a/i3/config
+++ b/i3/config
@@ -10,8 +10,9 @@ set $mod Mod4
 # programs to run at startup
 exec --no-startup-id /usr/bin/xrdb /home/skk/.Xresources
 exec --no-startup-id gpg-agent --daemon --enable-ssh-support --write-env-file "${HOME}/.gpg-agent-info"
-exec --no-startup-id /usr/libexec/gnome-settings-daemon
-exec --no-startup-id gnome-sound-applet
+#exec --no-startup-id /usr/libexec/gnome-settings-daemon
+#exec --no-startup-id gnome-sound-applet
+exec --no-startup-id /usr/bin/xfce4-session
 exec --no-startup-id /usr/bin/feh --bg-fill /home/skk/.i3/hubble_ultra_deep_field.jpg
 
 # The nvidia driver only provides support for Xinerama instead of RandR.
@@ -26,7 +27,9 @@ floating_modifier $mod
 # start a terminal
 #bindsym $mod+Return exec rxvt
 #bindsym $mod+Return exec gnome-terminal
-bindsym $mod+Return exec terminator
+#bindsym $mod+Return exec terminator
+bindsym $mod+Return exec xfce4-terminal
+#bindsym $mod+Return exec terminology
 #bindsym $mod+Shift+Return exec ~/.i3/dmenufm.sh
 
 bindsym $mod+Shift+o exec "gnome-screensaver-command --lock "
