Removed (commented out) ipv6,dhcp,vpn wlan0

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -1,22 +1,21 @@
 general {
     colors = true
     interval = 5
+    output_format = "i3bar"
 }
 
-#order += "ipv6"
 order += "disk /"
 order += "disk /home"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
-#order += "wireless wlan0"
+#order += "ethernet eth0"
 order += "ethernet enp15s0"
 #order += "battery 0"
 order += "load"
 order += "time"
 
-wireless wlan0 {
-    format_up = "W: (%quality at %essid) %ip"
-    format_down = "W: down"
+ethernet eth0 {
+    # if you use %speed, i3status requires root privileges
+    format_up = "E: %ip (%speed)"
+    format_down = "E: down"
 }
 
 ethernet enp15s0 {
@@ -24,6 +23,7 @@ ethernet enp15s0 {
     format_up = "E: %ip (%speed)"
     format_down = "E: down"
 }
+
 
 battery 0 {
     format = "%status %percentage %remaining"
