Changed alias for splitting window.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,7 +65,7 @@ bind C-p paste-buffer
 unbind %
 bind | split-window -h
 unbind '"'
-bind - split-window -v
+bind \ split-window -v
 
 # resize panes
 bind -r H resize-pane -L 5
