--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -18,6 +18,10 @@ interval=30
 command=/usr/libexec/i3blocks/memory swap
 interval=30
 
+[disk-root]
+command=/usr/libexec/i3blocks/disk /
+interval=30
+
 [disk-home]
 command=/usr/libexec/i3blocks/disk $HOME
 interval=30
