--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ sublime-text-3/Packages/User/Package Control.system-ca-bundle
 sublime-text-3/Packages/User/Package Control.cache/
 sublime-text-3/Packages/User/Package Control.ca-certs/
 
+sublime-text-3/Packages/Colorcoder/firstrun
+
 
 #sublime-text-3/Packages/BracketHighlighter
 #sublime-text-3/Packages/PyV8/linux64-p3
