ignore i_opener's history file

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ sublime-text-3/Packages/Terminal/
 sublime-text-3/Packages/Colorcoder/firstrun
 sublime-text-3/Packages/Ruby Debugger
 sublime-text-3/sublimeBookmarks.pickle
+sublime-text-3/Packages/User/i_opener_history.sublime-settings
 
 # GPG
 gnupg/gpg-agent.env.fish
