Ignore project-persist setting files.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ emacs/elpa
 emacs/url
 emacs/auto-save-list
 emacs/.graphene-geometry
+emacs/project-persist/*/.emacs.desktop*
 
 # vim
 vim/.netrwhist
